tests/compile-fail/borrows-prev.stderr
error[E0499]: cannot borrow `alpha` as mutable more than once at a time
  --> $DIR/borrows-prev.rs:9:5
   |
7  |     let (beta, b) = alpha.get(1..2);
   |                     ----- first mutable borrow occurs here
8  |     drop(beta);
9  |     alpha.get(1..2);
   |     ^^^^^ second mutable borrow occurs here
10 |     b[0];
   |     ---- first borrow later used here

For more information about this error, try `rustc --explain E0499`.
